# alloc-guard

./: CMakeLists.txt
cmake/: catch.cmake
inc/alloc_guard/: alloc_guard.h
inc/alloc_guard/details/: alloc_guard_msvc.h
tests/: CMakeLists.txt  main.cpp
